--- a/Templates/home.html
+++ b/Templates/home.html
@@ -24,7 +24,7 @@
               Log in
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="employe">Employe</a></li>
+              <li><a class="dropdown-item" href="employe">Employee</a></li>
               <li><a class="dropdown-item" href="user">User</a></li>
             </ul>
           </div>
