--- a/Templates/employe.html
+++ b/Templates/employe.html
@@ -12,7 +12,7 @@
         <div class="row" style="margin-top: 100px;margin-bottom: 50px" >
             <div class="col-sm-5">
                 <div class="card">
-                    <div class="card-header h3"><center>EMPLOYE LOGIN</center></div>
+                    <div class="card-header h3"><center>EMPLOYEE LOGIN</center></div>
                     <div class="card-body">
                         <form action="submit" method="post">
                             {% csrf_token %}
