--- a/Templates/for_service.html
+++ b/Templates/for_service.html
@@ -16,45 +16,44 @@
                     <div class="card">
                         <div class="card-header h3" id="values"><center>{{users}}</center></div>
                         <div class="card-body">
-                            <form action="" method="post">
+                            <form action="users/book" method="post">
+                                  {% csrf_token %}
                                 <div class="form-group">
                                     <label for="date">SERVICE REQUIRED ON:</label>
-                                    <input type="date" name="date" class="form-control" required>
+                                    <input type="date" name="frdate" class="form-control" required>
                                 </div><br>
                                 <div class="form-group mt-2">
                                     <label for="address">SERVICE REQUIRED AT:</label>
-                                    <select name="address" id="" class="form-control" required>
-                                        <option value="">--SELECT--</option>
-                                        <option value="">TIRUPUR</option>
-                                        <option value="">COIMBATORE</option>
-                                        <option value="">CHENNAI</option>
-                                        <option value="">MADURAI</option>
+                                    <select name="fraddress" id="hh" class="form-control" required>
+                                        <option value="gdg">--SELECT--</option>
+                                        <option value="Tirupur">TIRUPUR</option>
+                                        <option value="Coimbatore">COIMBATORE</option>
+                                        <option value="Chennai">CHENNAI</option>
+                                        <option value="Madurai">MADURAI</option>
                                     </select>
                                 </div><br>
                                 <div class="form-group mt-2">
                                     <label for="contact no">CONTACT NO:</label>
-                                    <input type="tel" maxlength="10" minlength="10" class="form-control" required>
+                                    <input type="tel" name="frcno" maxlength="10" value="" minlength="10" class="form-control" required>
                                 </div><br>
                                 <div class="form-group mt-2">
                                     <label for="email">EMAIL</label>
-                                    <input type="email" name="email" class="form-control" required>
+                                    <input type="email" name="fremail" value="" class="form-control" required>
                                 </div><br>   
                                 <div class="form-group mt-2">
                                     <small>SERVICE INFORMATION</small><br>
                                     <small>ADDITIONAL DETAILS,IF ANY</small>
-                                    <textarea name="" id="" placeholder="Enter here..." class="form-control" rows="2" required></textarea>
+                                    <textarea name="fraddinf" id="" placeholder="Enter here..." class="form-control" rows="2" required></textarea>
                                 </div><br>
                                 <div class="form-group mt-2">
                                     <div class="form-check">
-                                        <input type="checkbox" name="agree" value="agree" class="form-check-input" required>
+                                        <input type="checkbox"  value="agree" class="form-check-input"   required>
                                         <label for="agree" class="form-check-lable">Agree to terms and conditions</label>
                                     </div>
                                 </div>
                                 <div class="form-group mt-2 ">
-                                    <button class=" btn btn-primary btn-block form-control">CONTINUE BOOKING</button>
-                                </div>
-                                
-                                
+                                    <button class="btn btn-primary btn-block form-control">CONTINUE BOOKING</button>
+                                </div>   
                             </form>
                         </div>
                     </div>
