--- a/Templates/signup.html
+++ b/Templates/signup.html
@@ -14,7 +14,7 @@
                 <div class="card">
                     <div class="card-header h3"><center>NEW USER</center></div>
                     <div class="card-body">
-                        <form action="submit" method="post">
+                        <form action="" method="post">
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="name">USER NAME</label>
@@ -26,16 +26,14 @@
                             </div>
                             <div class="mt-2 form-group">
                                 <label for="password">PASSWORD</label>
-                                <input type="text" name="password" class="form-control" required>
+                                <input type="password" name="password" class="form-control" required>
                             </div>
                             <div class="form-group mt-3">
-                                <button class=" btn btn-success btn-block form-control">LOG IN</button>
+                                <button class=" btn btn-success btn-block form-control">Sign up</button>
                             </div>
                             <p class="mt-3">Already have an user account? <a href="login" class="text-decoration-none">Log in</a> </p>
                         </form>
-                    </div>
-
-                    
+                    </div>   
                 </div>
             </div>
         </div>
