--- a/Templates/home.html
+++ b/Templates/home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous"> <!--for icon -->
 </head>
 {% include 'navbar.html'%}
-<body id="home">
+<body >
 
     <div class="jumbotron"  id="new_way">
       <div class="container">
