--- a/Templates/for_service.html
+++ b/Templates/for_service.html
@@ -18,6 +18,7 @@
                         <div class="card-body">
                             <form action="users/book" method="post">
                                   {% csrf_token %}
+                                  <input type="text" value="{{users}}" hidden name="fname">
                                 <div class="form-group">
                                     <label for="date">SERVICE REQUIRED ON:</label>
                                     <input type="date" name="frdate" class="form-control" required>
