--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  {% block content %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,21 +29,24 @@
                 <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'jobhiring' %}">Job hiring</a>
+                <a class="nav-link" href="{% url 'services' %}">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'services' %}">Services</a>
+                <a class="nav-link" href="{% url 'jobhiring' %}">Job Hiring</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About us</a>
               </li>
+              {%if user.is_authenticated%}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">LOGOUT</a>
+              </li>
+              {%endif%}
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>          
+                      
           </div>
         </div>
       </nav>
 </body>
+{%endblock%}
 </html>
